--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "jnr-dev-task",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
